Fixed contrast ratio

--- a/www/catalog/view/stylesheet/bootstrap.scss
+++ b/www/catalog/view/stylesheet/bootstrap.scss
@@ -21,6 +21,8 @@ $gray-800:   #343a40;
 $gray-900:   #212529;
 $black:      #000;
 
+$min-contrast-ratio:   1.5 !default;
+
 $enable-caret:                       false;
 $line-height-base:                   1.8;
 $input-btn-padding-y:                .35rem;
